--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "client": "cd frontend && npm start",
+    "dev": "concurrently \"npm run start\" \"npm run client",
     "buildAndStart": "cd frontend && npm run build && cd .. && node ./bin/www"
   },
   "dependencies": {
+    "concurrently": "^5.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
