--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "client": "cd frontend && npm start",
-    "dev": "concurrently \"npm run start\" \"npm run client",
+    "dev": "concurrently \"nodemon run start\" \"npm run client",
     "buildAndStart": "cd frontend && npm run build && cd .. && node ./bin/www"
   },
   "dependencies": {
@@ -19,5 +19,8 @@
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.4",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
