--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "client": "cd frontend && npm start",
+    "dev": "concurrently \"nodemon run start\" \"npm run client",
     "buildAndStart": "cd frontend && npm run build && cd .. && node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.7.4",
+    "body-parser": "^1.18.3",
+    "concurrently": "^5.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -15,6 +20,10 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
