--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.7.4",
+    "@material-ui/core": "^4.11.3",
+    "axios": "^0.21.1",
     "body-parser": "^1.18.3",
     "concurrently": "^5.3.0",
     "cookie-parser": "~1.4.4",
@@ -19,9 +21,13 @@
     "express": "^4.16.4",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "material-ui-dropzone": "^3.5.0",
     "mongodb": "^3.6.4",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
