--- a/package.json
+++ b/package.json
@@ -26,10 +26,7 @@
     "material-ui-dropzone": "^3.5.0",
     "mongodb": "^3.6.4",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.2"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "jest": "^26.6.3",
