--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "client": "cd frontend && npm start",
-    "dev": "concurrently \"nodemon run start\" \"npm run client",
+    "dev": "concurrently \"nodemon run start\" \"npm run client\"",
     "buildAndStart": "cd frontend && npm run build && cd .. && node ./bin/www",
     "test": "jest"
   },
