--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@google-cloud/storage": "^5.7.4",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
+    "chalk": "^2.4.2",
     "concurrently": "^5.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -23,7 +25,7 @@
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "jest": "^26.6.0",
-    "mongodb": "^3.6.4",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.17",
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
