Edits to .travis.yml allowing Travis CI to start MongoDB

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,9 @@ script:
 
 services:
   - docker
+  - mongodb
+
+before_script:
+  - sleep 15
+  - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
 
