--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.17",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "jest": "^26.6.0",
