--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google-cloud/storage": "^5.7.4",
     "axios": "^0.21.1",
+    "babel-jest": "^26.6.3",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
     "concurrently": "^5.3.0",
@@ -23,11 +24,12 @@
     "firebase": "^8.2.7",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
-    "jest": "^26.6.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.17",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "ts-jest": "^26.5.4",
+    "jest": "26.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
