--- a/package.json
+++ b/package.json
@@ -32,6 +32,13 @@
     "jest": "26.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "babel-plugin-styled-components": "^1.12.0",
+    "babel-preset-gatsby": "^0.7.0",
+    "react-test-renderer": "^17.0.1",
+    "gatsby-plugin-eslint": "^2.0.8",
+    "eslint-plugin-jest": "^24.1.3"
   }
 }
