--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "firebase": "^8.2.7",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
+    "jest": "26.6.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.17",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "ts-jest": "^26.5.4",
-    "jest": "26.6.0"
+    "ts-jest": "^26.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
