--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
     "@google-cloud/storage": "^5.7.4",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "axios": "^0.21.1",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
@@ -19,6 +22,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
     "express": "^4.16.4",
     "firebase": "^8.2.7",
     "hbs": "^4.1.1",
@@ -27,9 +31,15 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.17",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "react-test-renderer": "^17.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@babel/plugin-syntax-jsx": "^7.12.13",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^26.6.3",
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^2.0.7",
+    "request": "^2.88.2"
   }
 }
