--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ node_js:
 install:
   - npm install
 
+before_script:
+  - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in google_cloud_api_key_2.json.enc -out google_cloud_api_key_2.json -d
+
 script:
   - npm test
 
