--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^26.6.3",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^7.24.0",
+    "eslint-plugin-react": "^7.23.2",
     "nodemon": "^2.0.7",
     "request": "^2.88.2"
   }
